@@ -9,6 +9,7 @@
 * Fix   - UPS invoice number allows numbers and letters.
 * Add 	- Tracks shipping services used at checkout.
 * Add   - Update the existing endpoint `POST /connect/packages` to create shipping label packages, and add an endpoint `PUT /connect/packages` to update shipping label packages.
+* Fix   - Only display shipping validation errors on the cart or checkout pages.
 
 = 1.25.8 - 2021-03-02 =
 * Tweak - Add support for new Jetpack 9.5 data connection.
